tests/ui/feature-gates/feature-gate-field-representing-type-raw.stderr
error[E0658]: use of unstable library feature `field_representing_type_raw`
  --> $DIR/feature-gate-field-representing-type-raw.rs:1:5
   |
LL | use std::field::FieldRepresentingType;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(field_representing_type_raw)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
