tests/ui/feature-gates/feature-gate-field-representing-type-raw.rs
use std::field::FieldRepresentingType;
//~^ ERROR: use of unstable library feature `field_representing_type_raw` [E0658]

fn main() {}
